Add project files and gitignore

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-﻿MONGODB_URI=mongodb+srv://shamzabacha03:Aimalaiman000$$$@cluster0.401m3v5.mongodb.net/todo-app?retryWrites=true&w=majority&appName=Cluster0
+﻿MONGODB_URI=mongodb+srv://umairkhan0345:umair531063$$$@cluster0.401m3v5.mongodb.net/todo-app?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
