--- a/todo-app/backendd/.env
+++ b/todo-app/backendd/.env
@@ -1,1 +1,5 @@
-MONGO_URI="mongodb+srv://scienctistshabir:shabir123@cluster0.ijikhut.mongodb.net/mernApp"
+# MONGO_URI="mongodb+srv://scienctistshabir:shabir123@cluster0.ijikhut.mongodb.net/mernApp"
+
+JWT_SECRET = '123abc'
+
+NODE_ENV = 'development'
