--- a/todo-app/backendd/.env
+++ b/todo-app/backendd/.env
@@ -3,3 +3,13 @@
 JWT_SECRET = '123abc'
 
 NODE_ENV = 'development'
+
+EMAIL_USER="abc@gmail.com"
+EMAIL_PASS="1234abcd"
+
+
+SMTP_USER="8c225f001@smtp-brevo.com"
+SMTP_PASS="9zLVh4fWSnUCaj8k"
+
+
+SENDER_EMAIL="btcnkhan@gmail.com"
