--- a/Todo List/Backend/package.json
+++ b/Todo List/Backend/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
